--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
             </ul><br><br>
         <h1><font color="red">Research Projects</font></h1>
         <p style="text-align:center;"><strong>[<font color="red">Click on the images to read more details!</font>]</strong></p>
-        <h4><font color="blue">1.  Automated and Resilient Control of Biochemical Reactions Through Cyber-Physical Digital Microfluidics [<font color="red">Completed</font>]</font></h4>
+        <h4><font color="blue">1.  Hardware-Software Codesign for Real-Time Error Recovery in Cyber-Physical Digital Microfluidic Biochips [<font color="red">Completed</font>]</font></h4>
         <p style="cursor: pointer; text-align:center;"><img src="./index_files/ErrorRecoverySetup.png" align="middle" width="80%" onclick="ToggleAppearErrorRecoveryProject()"></p>
 
         <div id="ToggleAppearDivErrorRecProject" style="display:none;">
@@ -482,7 +482,7 @@
 
             <p><font color="red"><strong>Related Publications:</strong></font> <strong>[J1][C1][C2]</strong></p>
         </div>
-        <h4><font color="blue">2.  Optimization of Microbiology-on-Chip: An Integrated Hardware/Software Hybrid Microfluidics Platform for Biomolecular Quantitative Analysis</font></h4>
+        <h4><font color="blue">2.  Hardwre-Software Codesign of Hybrid Microfluidic Biochips for Biomolecular Quantitative Analysis: System Modeling, Synthesis, and Optimization Methodologies</font></h4>
         <p style="cursor: pointer; text-align:center;"><img src="./index_files/BiologyOnChip.png" align="middle" width="60%" onclick="ToggleAppearBiologyOnChip()"></p>
 
         <div id="ToggleAppearDivBiologyOnChip" style="display:none;">
