--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <div class="news_sidebar" id="news_sidebar">
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
+					
+                    <font color="blue">October 2020:</font> Dr. Ibrahim's paper, "AdaPool: Multi-Armed Bandits for Adaptive Virology Screening on Cyber-Physical Digital-Microfluidic Biochips", is accepted for publication in the ACM/IEEE Workshop on Machine Learning for CAD (MLCAD). Congratulations!<br><br>
+					
                     <font color="blue">May 2020:</font> <font color="red">Great news! Our research, "Molecular Barcoding as a Defense against Benchtop Biochemical Attacks on DNA Fingerprinting and Information Forensics", is showcased on Duke University Pratt School of Engineering's website! Check out <a href="https://pratt.duke.edu/about/news/genetic-barcodes" target="_blank">this link</a>. It also appeared on other pages such as <a href="https://phys.org/news/2020-05-genetic-barcodes-authentic-dna-fingerprints.html" target="_blank">phys.org</a></font>.<br><br>
 
                     <font color="blue">May 2020:</font> Good news! Our journal paper entitled "Molecular Barcoding as a Defense against Benchtop Biochemical Attacks on DNA Fingerprinting and Information Forensics" is accepted for publication in IEEE Transactions on Information Forensics & Security. Congratulations! <br><br>
@@ -839,6 +842,18 @@
             <h1><font color="red">Peer-Reviewed Conference Papers</font></h1>
             <div class="research_list">
                 <ul>
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
+                                <div class="tag conference">C20</div>
+                            </th>
+                            <th class="content">
+                                <span class="title">AdaPool: Multi-Armed Bandits for Adaptive Virology Screening on Cyber-Physical Digital-Microfluidic Biochips</span> <br>
+                                By <strong>Mohamed Ibrahim</strong>.<br>
+                                <i>Proceedings of the ACM/IEEE Workshop on Machine Learning for CAD (MLCAD)</i>, 2020.<br>
+                            </th>
+                        </tr>
+                    </tbody></table></li>			
                   <li><table>
                         <tbody><tr>
                             <th class="tagcell">
