--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div class="news_sidebar" id="news_sidebar">
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
+                    <font color="blue">November 2020:</font> Dr. Ibrahim attends ACM/IEEE MLCAD (virtually) to present his work on AdaPool.<br><br>
 					
                     <font color="blue">October 2020:</font> Dr. Ibrahim's paper, "AdaPool: Multi-Armed Bandits for Adaptive Virology Screening on Cyber-Physical Digital-Microfluidic Biochips", is accepted for publication in the ACM/IEEE Workshop on Machine Learning for CAD (MLCAD). Congratulations!<br><br>
 					
@@ -1107,6 +1108,17 @@
             <h1><font color="red">Posters & Talks</font></h1>
             <div class="research_list">
                 <ul>
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
+                                <div class="tag working">PT16</div>
+                            </th>
+                            <th class="content">
+                                <span class="title">AdaPool: Multi-Armed Bandits for Adaptive Virology Screening on Cyber-Physical Digital-Microfluidic Biochips</span> <br>
+                                <i>Talk at the ACM/IEEE Workshop on Machine Learning for CAD (MLCAD)</i>, Virtual, November 2020.<br>
+                            </th>
+                        </tr>
+                    </tbody></table></li> 			
                   <li><table>
                         <tbody><tr>
                             <th class="tagcell">
