--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         <div class="news_sidebar" id="news_sidebar">
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
-                    <font color="blue">January 2021:</font> Dr. Ibrahim is invited to serve as a TPC member for the 8th ACM NanoCom, 2021. Here is the <a href="http://nanocom.acm.org/nanocom2021/cfp.php" target="_blank">CFP</a>. <br><br>
+                    <font color="blue">February 2021:</font> Dr. Ibrahim is invited to serve as a TPC member for the 2021 ISVLSI. Here is the <a href="http://www.eng.ucy.ac.cy/theocharides/isvlsi21/cfp.html" target="_blank">CFP</a>. <br><br>
+
+		    <font color="blue">January 2021:</font> Dr. Ibrahim is invited to serve as a TPC member for the 8th ACM NanoCom, 2021. Here is the <a href="http://nanocom.acm.org/nanocom2021/cfp.php" target="_blank">CFP</a>. <br><br>
 		
 		    <font color="blue">January 2021:</font> Our journal paper, BioCyBig: A Cyberphysical System for Integrative Microfluidics-Driven Analysis of Genomic Association Studies, has been recommended by IEEE Transactions on Big Data to be referenced in IEEE Computer's "Spotlight on Transactions" column. Congratulations! <br><br>
 					
@@ -1501,7 +1503,7 @@
                                 <div class="title">Technical Program Committee Member:</div>
                                 IEEE/ACM Design, Automation and Test in Europe Conference (DATE) 2019-2021<br>
                                 IEEE International Conference on VLSI Design (VLSID) 2019 <br>
-                                IEEE Computer Society Annual Symposium on VLSI (ISVLSI) 2019-2020 <br>
+                                IEEE Computer Society Annual Symposium on VLSI (ISVLSI) 2019-2021 <br>
                                 ACM International Conference on Nanoscale Computing and Communication (NanoCom) 2019, 2021 <br>
                                 IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC) 2019
                             </th>
