--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <body>
         <div class="sidebar">
             <div class="name"><center>Mohamed Ibrahim</center></div>
-            <div class="subtitle"><br> <center>Graduated from the Department of Electrical and Computer Engineering <br>
-                <center><font color="blue">Duke University</font>
+            <div class="subtitle"><br> <center>Department of Electrical Engineering and Computer Sciences<br>
+                <center><font color="blue">University of California, Berkeley</font>
             </center></center></div><center>
             <img src="./index_files/Mohamed.jpg" width="80%" >
             <div class="contact_subtitle"><br><font color="red"><strong>Contact Info:</strong></font><br>
                 <!-- 2700 Mission College Blvd Ste 140-245<br>
                 Santa Clara, CA 95054<br> -->
-                mohamed.s.ibrahim <strong>AT</strong> alumni.duke.edu<br><br>
+                mohamed.ibrahim <strong>AT</strong> berkeley.edu<br><br>
 				
 				[<a href="https://scholar.google.com/citations?user=o_GlEmgAAAAJ&hl=en" target="_blank">Google Scholar</a>]<br>
 				
