--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     </head>
     <body>
         <div class="sidebar">
+		<center><img src="./index_files/Mohamed.jpg" width="80%" ></center>
             <div class="name"><center>Mohamed Ibrahim</center></div>
+	    <div class="subtitle"><br> <center>Postdoctoral Researcher<br>		
             <div class="subtitle"><br> <center>Department of Electrical Engineering and Computer Sciences<br>
                 <center><font color="blue">University of California, Berkeley</font>
             </center></center></div><center>
-            <img src="./index_files/Mohamed.jpg" width="80%" >
             <div class="contact_subtitle"><br><font color="red"><strong>Contact Info:</strong></font><br>
                 <!-- 2700 Mission College Blvd Ste 140-245<br>
                 Santa Clara, CA 95054<br> -->
