--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     </head>
     <body>
         <div class="sidebar">
-		<center><img src="./index_files/Mohamed.jpg" width="80%" ></center>
+		<center><img src="./index_files/Ibrahim.jpg" width="70%" ></center>
             <div class="name"><center>Mohamed Ibrahim</center></div>
 	    <div class="subtitle"><br> <center>Postdoctoral Researcher<br>		
-            <div class="subtitle"><br> <center>Department of EECS<br>
+            	<center>Department of EECS<br>
                 <center><font color="blue">UC Berkeley</font>
-            </center></center></div><center>
+            </center></center></center></div><center>
             <div class="contact_subtitle"><br><font color="red"><strong>Contact Info:</strong></font><br>
                 <!-- 2700 Mission College Blvd Ste 140-245<br>
                 Santa Clara, CA 95054<br> -->
