--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="./index_files/style.css">
 
         <link rel="shortcut icon" type="image/x-icon" href="./index_files/myicon.png" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     </head>
     <body>
         <div class="sidebar">
@@ -30,19 +31,17 @@
             	<center>Department of EECS<br>
                 <center><font color="blue">UC Berkeley</font>
             </center></center></center></div><center>
-            <div class="contact_subtitle"><br><font color="red"><strong>Contact Info:</strong></font><br>
-                <!-- 2700 Mission College Blvd Ste 140-245<br>
-                Santa Clara, CA 95054<br> -->
-                mohamed.ibrahim <strong>AT</strong> berkeley.edu<br><br>
-				
-				[<a href="https://scholar.google.com/citations?user=o_GlEmgAAAAJ&hl=en" target="_blank">Google Scholar</a>]<br>
-				
-                [<a href="https://www.linkedin.com/in/mohamedsribrahim/" target="_blank">LinkedIn</a>]<br>
-
-                [<a href="https://www.researchgate.net/profile/Mohamed_Ibrahim134" target="_blank">ResearchGate</a>]<br>
-				<!-- <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=uFl8a_EGxlPT1tzvQAR-AqSqGv9-MtN9bBkoBgAJG_4"></script> -->
+            <div class="contact_subtitle"><br><font color="red"><strong>Contact Info:</strong></font>
+            <ul class="fa-ul">
+                <li><span class="fa-li"><i class="fa fa-map-marker" aria-hidden="true"></i></span> Berkeley, CA</li>
+                <li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true"></i></span><a href="mailto:mohamed.ibrahim@berkeley.edu">Email</a></li>
+                <li><span class="fa-li"><i class="fab fa-orcid" aria-hidden="true"></i></span><a href="https://orcid.org/0000-0003-0278-4040">ORCID</a></li>
+                <li><span class="fa-li"><i class="fas fa-fw fa-graduation-cap"></i></span><a href="https://scholar.google.com/citations?user=o_GlEmgAAAAJ&hl=en">Google Scholar</a></li>
+                <li><span class="fa-li"><i class="fab fa-researchgate"></i></span><a href="https://www.researchgate.net/profile/Mohamed_Ibrahim134">ResearchGate</a></li>
+                <li><span class="fa-li"><i class="fab fa-linkedin-in"></i></span><a href="https://www.linkedin.com/in/mohamedsribrahim/">LinkedIn</a></li>
+            </ul>
             </div>
-        </center></div>        </div>
+        </div>        </div>
         <div class="topbar">
             <ul class="navigation_list">
                 <li class="selected">About</li>
