--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	    <div class="subtitle"><br> <center>Postdoctoral Researcher<br>		
             	<center>Department of EECS<br>
                 <center><font color="blue">UC Berkeley</font>
-            </center></center></center></div><center>
+            </center></center></center></div>
             <div class="contact_subtitle"><br><font color="red"><strong>Contact Info:</strong></font>
             <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fa fa-map-marker" aria-hidden="true"></i></span> Berkeley, CA</li>
