--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		
 		<p>Dr. Ibrahim's current research is focused on brain-inspired computing, with applications to edge AI and healthcare, where he explores methods to optimize energy efficiency, resilience, and security. His research interests also include cyber-physical microfluidic biochips, IoT-based eHealth, and implantable micro-systems. In his research, Dr. Ibrahim draws on methods from computer architecture and embedded systems; electronic design automation; and agile VLSI design. Dr. Ibrahim's research has resulted in two co-authored books, three book chapters, and over 38 papers published in premier journals, such as Proceedings of the IEEE, and refereed conference proceedings.<br></p>		    		
 		
-    		<p>Dr. Ibrahim was a recipient of the 2018 Council of Graduate Schools (CGS)/ProQuest Distinguished Dissertation Award in Mathematics, Physical Sciences, and Engineering; the 2019 Outstanding Dissertation Award from the Department of Electrical and Computer Engineering at Duke University; the Best Paper award at the 2017 IEEE/ACM Design, Automation, and Test in Europe Conference; the 2017 Postdoc Mobility award from the Technical University of Munich, Germany; two ACM conference travel awards from ACM-SIGBED in 2016 and ACM-SIGDA in 2017; and Duke Graduate School Fellowship in 2013. He has served as a Technical Program Committee Member for the IEEE VLSID (2019), IFIP/IEEE VLSI-SoC (2019), and has been serving for the ACM NanoCom, the IEEE/ACM DATE Conference, and the IEEE ISVLSI, all since 2019, and as an expert reviewer for a large number of conferences and journals.<br></p>
+    		<p>Dr. Ibrahim was a recipient of the 2018 Council of Graduate Schools (CGS)/ProQuest Distinguished Dissertation Award in Mathematics, Physical Sciences, and Engineering; the 2019 Outstanding Dissertation Award from the Department of Electrical and Computer Engineering at Duke University; the Best Paper award at the 2017 IEEE/ACM Design, Automation, and Test in Europe Conference; the 2017 Postdoc Mobility award from the Technical University of Munich, Germany; two ACM conference travel awards from ACM-SIGBED in 2016 and ACM-SIGDA in 2017; and Duke Graduate School Fellowship in 2013. He has served as a Technical Program Committee Member for the IEEE/ACM ICCAD (2021), the IEEE VLSID (2019), IFIP/IEEE VLSI-SoC (2019), and has been serving for the ACM NanoCom, the IEEE/ACM DATE Conference, and the IEEE ISVLSI, all since 2019, and as an expert reviewer for a large number of conferences and journals.<br></p>
         	
         	<h1><font color="red">Press</font></h1>
 
@@ -1510,7 +1510,8 @@
                                 IEEE International Conference on VLSI Design (VLSID) 2019 <br>
                                 IEEE Computer Society Annual Symposium on VLSI (ISVLSI) 2019-2021 <br>
                                 ACM International Conference on Nanoscale Computing and Communication (NanoCom) 2019, 2021 <br>
-                                IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC) 2019
+                                IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC) 2019 <br>
+				IEEE/ACM International Conference on Computer-Aided Design (ICCAD) 2021
                             </th>
                         </tr>
                     </tbody></table></li>                        
