--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <div class="news_sidebar" id="news_sidebar">
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
+					
+                    <font color="blue">July 2021:</font> Dr. Ibrahim is invited to serve on the PC for the 2022 DATE.<br><br>
+					
                     <font color="blue">May 2021:</font> Dr. Ibrahim is invited to serve on the PC for the 2021 ICCAD.<br><br>
 
                     <font color="blue">May 2021:</font> Dr. Ibrahim joins UC Berkeley as a Postdoctoral Researcher. He will work on brain-inspired computing.<br><br>
