--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 		
+		    <font color="blue">November 2021:</font> Dr. Ibrahim was invited to give a lecture on efficient hardware implementations of brain-inspired computing at Berkeley's Redwood Center for Theoretical Neuroscience. The lecture is part of Neuroscience 299.<br><br>
 					
 		    <font color="blue">September 2021:</font> Dr. Ibrahim will serve as a session chair for the 2021 ICCAD.<br><br>
 					
@@ -1353,7 +1354,22 @@
                 </ul>
             </div>
 
-        		<h1><font color="red">Teaching at Duke University</font></h1>   		
+            <h1><font color="red">Teaching at UC Berkeley</font></h1> 
+            <div class="ed_list">
+                <ul>
+                    <li><table>
+                        <tbody><tr>
+                            <th><div class="year">2021</div></th>
+                            <th>
+                                <div class="title">Guest Lecturer</div>
+                                <font color="black">Computing with High-Dimensional Vectors (Neuroscience 299)</font><br>
+                            </th>
+                        </tr>
+                    </tbody></table></li> 			
+                </ul>
+            </div>
+		
+            <h1><font color="red">Teaching at Duke University</font></h1>   		
             <div class="ed_list">
                 <ul>
                     <li><table>
