--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         <div class="news_sidebar" id="news_sidebar">
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
-		
+
+		    <font color="blue">December 2021:</font> A paper accepted at CLeaR 2022, a workshop to be held in conjunction with AAAI 2022.<br><br>
+					
 		    <font color="blue">November 2021:</font> Dr. Ibrahim was invited to give a lecture on efficient hardware implementations of brain-inspired computing at Berkeley's Redwood Center for Theoretical Neuroscience. The lecture is part of Neuroscience 299.<br><br>
 					
 		    <font color="blue">September 2021:</font> Dr. Ibrahim will serve as a session chair for the 2021 ICCAD.<br><br>
@@ -875,6 +877,18 @@
             <h1><font color="red">Peer-Reviewed Conference Papers</font></h1>
             <div class="research_list">
                 <ul>
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
+                                <div class="tag conference">C21</div>
+                            </th>
+                            <th class="content">
+                                <span class="title">A Brain-Inspired Hierarchical Reasoning Framework for Cognition-Augmented Prosthetic Grasping</span> <br>
+                                By Laura I. Galindez Olascoaga, Alisha Menon, <strong>Mohamed Ibrahim</strong>, and Jan M. Rabaey.<br>
+                                <i>International Workshop on Combining Learning and Reasoning: Programming Languages, Formalisms, and Representations (CLeaR)</i>, 2022.<br>
+                            </th>
+                        </tr>
+                    </tbody></table></li>			
                   <li><table>
                         <tbody><tr>
                             <th class="tagcell">
