--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 
+		    <font color="blue">February 2022:</font> Dr. Ibrahim will serve on the PC for the 2022 ISVLSI.<br><br>
+					
 		    <font color="blue">December 2021:</font> A paper accepted at CLeaR 2022, a workshop to be held in conjunction with AAAI 2022.<br><br>
 					
 		    <font color="blue">November 2021:</font> Dr. Ibrahim was invited to give a lecture on efficient hardware implementations of brain-inspired computing at Berkeley's Redwood Center for Theoretical Neuroscience. The lecture is part of Neuroscience 299.<br><br>
@@ -1558,7 +1560,7 @@
                                 <div class="title">Technical Program Committee Member:</div>
                                 IEEE/ACM Design, Automation and Test in Europe Conference (DATE) 2019-2022<br>
                                 IEEE International Conference on VLSI Design (VLSID) 2019 <br>
-                                IEEE Computer Society Annual Symposium on VLSI (ISVLSI) 2019-2021 <br>
+                                IEEE Computer Society Annual Symposium on VLSI (ISVLSI) 2019-2022<br>
                                 ACM International Conference on Nanoscale Computing and Communication (NanoCom) 2019, 2021 <br>
                                 IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC) 2019 <br>
 				IEEE/ACM International Conference on Computer-Aided Design (ICCAD) 2021
