--- a/index.html
+++ b/index.html
@@ -244,54 +244,54 @@
                                 <div class="dot"> </div>
                             </th>
                             <th class="content">
-                                <span class="title"><strong>Cyber-Physical Systems Synthesis and Learning:</strong> linear programming [C18]; satisfiability modulo theories [C14]; probabilistic model checking / Markov chains [J9]; sample-based reinforcement learning; policy gradient reinforcement learning; deep reinforcement learning; time-series analysis.<br>
+                                <span class="title"><strong>Computer Architecture:</strong> Domain-Specific Architectures; Hardware-Software Co-Design; Hyperdimensional Computing.<br>
                             </th>
                         </tr>
                     </tbody></table></li>
-
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="dot"> </div>
-                            </th>
-                            <th class="content">
-                                <span class="title"><strong>CAD Algorithms:</strong> graph search; combinatorial optimization; divide and conquer; dynamic programming; metaheuristics; complexity analysis.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>
-
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="dot"> </div>
-                            </th>
-                            <th class="content">
-                                <span class="title"><strong>Wet Lab & Cyberbiosecurity:</strong> polymerase chain reaction; gene expression analysis; gel electrophoresis; quantitative analysis; molecular (DNA) barcoding [J4, J18].<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>
-
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="dot"> </div>
-                            </th>
-                            <th class="content">
-                                <span class="title"><strong>Microfluidic Biochips, Embedded Systems, and IoT:</strong> fluid dynamics simulations [C11, J12]; real-time digital microfluidics [C2, C6]; IoT-connected biochips & fog-based eHealth [C19, J5, J8].<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li> 
-
+		    
                     <li><table>
                         <tbody><tr>
                             <th class="tagcell">
                                 <div class="dot"> </div>
                             </th>
                             <th class="content">
-                                <span class="title"><strong>VLSI Circuit Design:</strong> CMOS VLSI design methodologies; static timing analysis (STA); design-for-test (DfT); hardware verification methodologies.<br>
+                                <span class="title"><strong>VLSI Circuits:</strong> Low-Power Optimization; Static Timing Analysis (STA); Design-for-Test (DfT).<br>
                             </th>
                         </tr>
-                    </tbody></table></li>     
+                    </tbody></table></li> 		    
+		    
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
+                                <div class="dot"> </div>
+                            </th>
+                            <th class="content">
+                                <span class="title"><strong>Cyber-Physical Embedded Systems:</strong> Sensory-Motor Microfluidic Platforms; Real-Time Synthesis. <br>
+                            </th>
+                        </tr>
+                    </tbody></table></li>
+
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
+                                <div class="dot"> </div>
+                            </th>
+                            <th class="content">
+                                <span class="title"><strong>EDA and Optimization:</strong> Machine Learning; Linear Programming; Graph Search; Dynamic Programming; Complexity Analysis.<br>
+                            </th>
+                        </tr>
+                    </tbody></table></li>
+
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
+                                <div class="dot"> </div>
+                            </th>
+                            <th class="content">
+                                <span class="title"><strong>Wet Lab & Cyberbiosecurity:</strong> Quantitative PCR; Gene Expression Analysis; Molecular (DNA) Barcoding.<br>
+                            </th>
+                        </tr>
+                    </tbody></table></li>    
             </ul>
             </div>
 
