--- a/index.html
+++ b/index.html
@@ -1549,9 +1549,10 @@
                                 IEEE/ACM Design, Automation and Test in Europe Conference (DATE)<br>
                                 IEEE/ACM Design Automation Conference (DAC)<br>
                                 IEEE/ACM International Conference on Computer-Aided Design (ICCAD)<br>
-								IEEE International Symposium on Circuits and Systems (ISCAS)<br>
-								IEEE European Test Symposium (ETS)<br>
+				IEEE International Symposium on Circuits and Systems (ISCAS)<br>
+				IEEE European Test Symposium (ETS)<br>
                                 ACM International Conference on Nanoscale Computing and Communication (NanoCom)<br>
+				IEEE International Conference on Artificial Intelligence Circuits and Systems (AICAS)<br>
                             </th>
                         </tr>
                     </tbody></table></li>
@@ -1563,10 +1564,10 @@
                                 IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD)<br>
                                 IEEE Transactions on Very Large Scale Integration Systems (TVLSI)<br>
                                 IEEE Transactions on Biomedical Circuits and Systems (TBioCAS)<br>
-								ACM Transactions on Design Automation of Electronic Systems (ACM TODAES)<br>
-								ACM Journal on Emerging Technologies in Computing Systems (ACM JETC)<br>
-								Integration, the VLSI Journal (Elsevier)<br>
-								Microelectronics Journal<br>
+				ACM Transactions on Design Automation of Electronic Systems (ACM TODAES)<br>
+				ACM Journal on Emerging Technologies in Computing Systems (ACM JETC)<br>
+				Integration, the VLSI Journal (Elsevier)<br>
+				Microelectronics Journal<br>
                             </th>
                         </tr>
                     </tbody></table></li>
@@ -1575,12 +1576,12 @@
                             <th><div class="year">TPC</div></th>
                             <th>
                                 <div class="title">Technical Program Committee Member:</div>
-                                IEEE/ACM Design, Automation and Test in Europe Conference (DATE) 2019-2023<br>
+                                IEEE/ACM Design, Automation and Test in Europe Conference (DATE) 2019-<br>
                                 IEEE International Conference on VLSI Design (VLSID) 2019 <br>
                                 IEEE Computer Society Annual Symposium on VLSI (ISVLSI) 2019-2022<br>
                                 ACM International Conference on Nanoscale Computing and Communication (NanoCom) 2019, 2021 <br>
                                 IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC) 2019 <br>
-				IEEE/ACM International Conference on Computer-Aided Design (ICCAD) 2021, 2022
+				IEEE/ACM International Conference on Computer-Aided Design (ICCAD) 2021-
                             </th>
                         </tr>
                     </tbody></table></li>                        
