--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="sidebar">
 		<center><img src="./index_files/Ibrahim.jpg" width="60%" ></center>
             <div class="name"><center>Mohamed Ibrahim</center></div>
-	    <div class="subtitle"><br> <center>Postdoctoral Researcher<br>		
-            	<center>Department of EECS<br>
-                <center><font color="blue">UC Berkeley</font>
+	    <div class="subtitle"><br> <center>Senior Research Staff<br>		
+            	<center>School of ECE<br>
+                <center><font color="blue">Georgia Tech</font>
             </center></center></center></div>
             <div class="contact_subtitle"><br><font color="red"><strong>Contact Info:</strong></font>
             <ul class="fa-ul">
@@ -57,7 +57,7 @@
 
 		    <font color="blue">November 2023:</font> Two papers accepted for presentation at IEEE/ACM DATE 2024.<br><be>
 
-		    <font color="blue">October 2023:</font> Dr. Ibrahim joined Georgia Tech (Center for the Co-Design of Cognitive Systems) to work as a Senior Research Staff, advised by Prof. Ray Chowdhury. <br><be>			    
+		    <font color="blue">October 2023:</font> Dr. Ibrahim joined Georgia Tech (Center for the Co-Design of Cognitive Systems) to work as a Senior Research Staff, advised by Prof. Arijit Raychowdhury. <br><be>			    
 
 	            <font color="blue">July 2022:</font> Dr. Ibrahim will serve as a TPC member for the 2024 DATE.<br><br>			
 			    
@@ -229,7 +229,7 @@
         </div>
         <div class="maintext target" id="about_place" style="" align="justify">
     		<h1><font color="red">About</font></h1>
-    		<p>Welcome! I am Mohamed Ibrahim, a Postdoctoral Researcher at the <a href="https://www.berkeley.edu/">University of California, Berkeley</a>, advised by <a href="https://www.janrabaey.com/">Prof. Jan M. Rabaey</a>. My research focuses on developing robust, trustworthy, and explainable cognitive computing frameworks to improve the efficiency of collaborative human-AI systems. I am particularly interested in applying these frameworks to improve sensory-motor healthcare technologies and collaborative robotic systems. Through highly interdisciplinary research across biology, algorithms, architectures, and algorithm-hardware co-design, I aim to revolutionize how we approach cognitive system design for such critical applications.<br></p>
+    		<p>Welcome! I am Mohamed Ibrahim, a Senior Research Staff at <a href="https://www.gatech.edu/">Georgia Institute of Technology</a> (<a href="https://www.src.org/program/jump2/cocosys/">COCOSYS</a>), advised by <a href="https://ece.gatech.edu/directory/arijit-raychowdhury">Prof. Chowdhury</a>. Before joining Georgia Tech, I was a Postdoctoral Researcher at the <a href="https://www.berkeley.edu/">University of California, Berkeley</a>, advised by <a href="https://www.janrabaey.com/">Prof. Jan M. Rabaey</a>. My research focuses on developing robust, trustworthy, and explainable cognitive computing frameworks to improve the efficiency of collaborative human-AI systems. I am particularly interested in applying these frameworks to improve sensory-motor healthcare technologies and collaborative robotic systems. My expertise includes computer architecture, CMOS VLSI design, algorithm-hardware co-design, and electronic design automation (EDA). <br></p>
 		
 		<p>I received my Ph.D. and M.Sc. degrees in 2018 and 2017, respectively, both in Electrical and Computer Engineering from <a href="https://duke.edu/">Duke University</a>. Following my PhD studies, I worked for three years in the semiconductor industry, where I gained extensive experience in hardware-software co-design for a variety of SoC designs, ranging from the data center to the edge. I have also been on the technical program committees for multiple conferences, including IEEE/ACM ICCAD, IEEE/ACM DATE, and IEEE ISVLSI. Additionally, I serve as an expert reviewer for a large number of conferences and journals.<br></p>		    		
 		
