--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </center></center></center></div>
             <div class="contact_subtitle"><br><font color="red"><strong>Contact Info:</strong></font>
             <ul class="fa-ul">
-                <li><span class="fa-li"><i class="fa fa-map-marker" aria-hidden="true"></i></span> Berkeley, CA</li>
-                <li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true"></i></span><a href="mailto:mohamed.ibrahim@berkeley.edu">Email</a></li>
+                <li><span class="fa-li"><i class="fa fa-map-marker" aria-hidden="true"></i></span> Atlanta, GA</li>
+                <li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true"></i></span><a href="mailto:mohamed.ibrahim@gatech">Email</a></li>
                 <li><span class="fa-li"><i class="fab fa-orcid" aria-hidden="true"></i></span><a href="https://orcid.org/0000-0003-0278-4040">ORCID</a></li>
                 <li><span class="fa-li"><i class="fas fa-fw fa-graduation-cap"></i></span><a href="https://scholar.google.com/citations?user=o_GlEmgAAAAJ&hl=en">Google Scholar</a></li>
                 <li><span class="fa-li"><i class="fab fa-researchgate"></i></span><a href="https://www.researchgate.net/profile/Mohamed_Ibrahim134">ResearchGate</a></li>
