--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 
-		    <font color="blue">November 2023:</font> Two papers accepted for presentation at IEEE/ACM DATE 2024.<br><be>
+		    <font color="blue">November 2023:</font> Two papers accepted for presentation at IEEE/ACM DATE 2024.<br><br>
 
-		    <font color="blue">October 2023:</font> Dr. Ibrahim joined Georgia Tech (Center for the Co-Design of Cognitive Systems) to work as a Senior Research Staff, advised by Prof. Arijit Raychowdhury. <br><be>			    
+		    <font color="blue">October 2023:</font> Dr. Ibrahim joined Georgia Tech (Center for the Co-Design of Cognitive Systems) to work as a Senior Research Staff, advised by Prof. Arijit Raychowdhury. <br><br>
 
 	            <font color="blue">July 2022:</font> Dr. Ibrahim will serve as a TPC member for the 2024 DATE.<br><br>			
 			    
