--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 
-		    <font color="blue">November 2023:</font> Two papers accepted for presentation at IEEE/ACM DATE 2024.<br><br>
+		    <font color="blue">May 2024:</font> Our proposal for a special session at ESWeek 2024 has been accepted! The session is entitled: "Neuro-Symbolic Architecture Meets LLMs: A Memory-Centric Perspective".<br><br>
+
+		    <font color="blue">April 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2024 ICCAD.<br><br>
+
+		    <font color="blue">November 2023:</font> Two papers accepted for presentation at IEEE/ACM DATE 2024.<br><br>					
 
 		    <font color="blue">October 2023:</font> Dr. Ibrahim joined Georgia Tech (Center for the Co-Design of Cognitive Systems) to work as a Senior Research Staff, advised by Prof. Arijit Raychowdhury. <br><br>
 
