--- a/index.html
+++ b/index.html
@@ -1200,6 +1200,17 @@
                   <li><table>
                         <tbody><tr>
                             <th class="tagcell">
+                                <div class="tag working">PT18</div>
+                            </th>
+                            <th class="content">
+                                <span class="title">Efficient Design of a Hyperdimensional Processing Unit for Multi-Layer Cognition</span> <br>
+                                <i>Talk and Poster at the IEEE/ACM Design, Automation and Test in Europe Conference (DATE)</i>, Valencia, Spain, March 2024.<br>
+                            </th>
+                        </tr>
+                    </tbody></table></li>
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
                                 <div class="tag working">PT17</div>
                             </th>
                             <th class="content">
