--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 
+	            <font color="blue">July 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2025 ASP-DAC.<br><br>
+				
 		    <font color="blue">May 2024:</font> Our proposal for a special session at ESWeek 2024 has been accepted! The session is entitled: "Neuro-Symbolic Architecture Meets LLMs: A Memory-Centric Perspective".<br><br>
 
 		    <font color="blue">April 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2024 ICCAD.<br><br>
@@ -1628,6 +1630,7 @@
                                 ACM International Conference on Nanoscale Computing and Communication (NanoCom) 2019, 2021 <br>
                                 IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC) 2019 <br>
 				IEEE/ACM International Conference on Computer-Aided Design (ICCAD) 2021-
+				IEEE/ACM Asia and South Pacific Design Automation Conference (ASP-DAC) 2024-
                             </th>
                         </tr>
                     </tbody></table></li>                        
