--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 
-	            <font color="blue">July 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2025 ASP-DAC.<br><br>
+	            <font color="blue">August 2024:</font> Our journal paper is accepted for publication in the first issue of IEEE TCASAI!<br><br>
+
+		    <font color="blue">July 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2025 ASP-DAC.<br><br>
 				
 		    <font color="blue">May 2024:</font> Our proposal for a special session at ESWeek 2024 has been accepted! The session is entitled: "Neuro-Symbolic Architecture Meets LLMs: A Memory-Centric Perspective".<br><br>
 
@@ -645,6 +647,18 @@
             <div class="research_list">
                 <ul>   
                   <h3><font color="green">Accepted for Publication OR Published:</font></h3> 		
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
+                                <div class="tag journal">J20</div>
+                            </th>
+                            <th class="content">
+                                <span class="title">Towards Efficient Neuro-Symbolic AI: From Workload Characterization to Hardware Architecture</span> <br>
+                                By Zishen Wan, Che-Kai Liu, Hanchen Yang, Ritik Raj, Chaojian Li, Haoran You, Yonggan Fu, Cheng Wan, Sixu Li, Youbin Kim, Ananda Samajdar, Yingyan (Celine) Lin, <strong>Mohamed Ibrahim</strong>, Jan M. Rabaey, Tushar Krishna, and Arijit Raychowdhury. <br>
+                                <i>IEEE Transactions on Circuits and Systems for Artificial Intelligence (TCASAI)</i>, 2024.<br>
+                            </th>
+                        </tr>
+                    </tbody></table></li> 
                   <li><table>
                         <tbody><tr>
                             <th class="tagcell">
