--- a/index.html
+++ b/index.html
@@ -915,6 +915,18 @@
                   <li><table>
                         <tbody><tr>
                             <th class="tagcell">
+                                <div class="tag conference">C24</div>
+                            </th>
+                            <th class="content">
+                                <span class="title">Neuro-Symbolic Architecture Meets Large Language Models: A Memory-Centric Perspective</span> <br>
+                                By <strong>Mohamed Ibrahim</strong>, Zishen Wan, Haitong Li, Priyadarshini Panda, Tushar Krishna, Pentti Kanerva, Yiran Chen, and Arijit Raychowdhury.<br>
+                                <i>Proceedings of IEEE/ACM International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS)</i>, 2024.<br>
+                            </th>
+                        </tr>
+                    </tbody></table></li>
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
                                 <div class="tag conference">C23</div>
                             </th>
                             <th class="content">
