--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 
-	            <font color="blue">August 2024:</font> Our journal paper is accepted for publication in the first issue of IEEE TCASAI!<br><br>
+	            <font color="blue">August 2024:</font> Our journal paper is accepted for publication in IEEE TCASAI!<br><br>
 
 		    <font color="blue">July 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2025 ASP-DAC.<br><br>
 				
@@ -237,11 +237,13 @@
         </div>
         <div class="maintext target" id="about_place" style="" align="justify">
     		<h1><font color="red">About</font></h1>
-    		<p>Welcome! I am Mohamed Ibrahim, a Senior Research Engineer and Research Faculty Member at the <a href="https://www.gatech.edu/">Georgia Institute of Technology</a>, advised by <a href="https://ece.gatech.edu/directory/arijit-raychowdhury">Prof. Arijit Raychowdhury</a>. Before joining Georgia Tech, I was a Postdoctoral Researcher at the <a href="https://www.berkeley.edu/">University of California, Berkeley</a>, advised by <a href="https://www.janrabaey.com/">Prof. Jan M. Rabaey</a>. My research interests are broadly in energy-efficient AI, brain-inspired computing, and human-centered interactive systems. My goal is to design reliable, trustworthy, and explainable hardware and systems aimed to improve the efficiency of cyber-physical healthcare and embodied cognition. <br></p>
+    		<p>Welcome! I am Mohamed Ibrahim, a Senior Research Engineer and Research Faculty Member at the <a href="https://www.gatech.edu/">Georgia Institute of Technology</a>, advised by <a href="https://ece.gatech.edu/directory/arijit-raychowdhury">Prof. Arijit Raychowdhury</a>. Before joining Georgia Tech, I was a Postdoctoral Researcher at the <a href="https://www.berkeley.edu/">University of California, Berkeley</a>, advised by <a href="https://www.janrabaey.com/">Prof. Jan M. Rabaey</a>. My research lies at the intersection of embodied intelligence, VLSI design, brain-inspired computing, and hardware-software co-design. My goal is to advance embodied AI applications by creating energy-efficient AI systems and hardware that are inherently adaptable, reliable, and trustworthy. <br></p>
 		
 		<p>I received my Ph.D. and M.Sc. degrees in 2018 and 2017, respectively, both in Electrical and Computer Engineering from <a href="https://duke.edu/">Duke University</a>. Following my PhD studies, I worked for three years in the semiconductor industry, where I gained extensive experience in hardware-software co-design for a variety of SoC designs. I have also been on the technical program committees for multiple conferences, including ICCAD, DATE, and ASP-DAC. Additionally, I serve as an expert reviewer for a large number of conferences and journals.<br></p>		    		
 
 		<p>My research has been recognized with prestigious awards, including the <a href="https://gradschool.duke.edu/about/news/engineering-phd-graduate-receives-dissertation-award/">Council of Graduate Schools/ProQuest Distinguished Dissertation Award in Mathematics, Physical Sciences, and Engineering</a>, and an <a href="https://ece.duke.edu/phd/students/awards-honors">Outstanding Dissertation award</a> from the department of Electrical and Computer Engineering at Duke University. I also received a <a href="https://past.date-conference.com/proceedings-archive/2017/html/bestpaper.html">Best Paper Award</a> at the 2017 DATE Conference.<br></p>
+
+		<h4><font color="red">"I am on the academic job market this year! If your institution is looking for someone who does multidisciplinary research in hardware-accelerated AI, embedded systems, or hardware-software co-design, please reach out!"</font></h4>
 		
         	<h1><font color="red">Press</font></h1>
 
